# sanders-customer-platform

./: .gitignore  Dockerfile  README.md  job-details.json  pyproject.toml
.github/workflows/: ci.yml  deploy-app.yml  deploy-infra.yml
app/: main.py
app/config/: dev.yml  loader.py  prod.yml  stg.yml
app/libs/: ddb.py  exceptions.py  logging.py  s3_io.py
cdk/: app.py  cdk-wrapper.py  cdk.json  sanders_customer_platform_stack.py
cdk/cdk_constructs/: batch_environment.py  batch_iam_roles.py  dynamodb_table.py  ecr_repository.py  monitoring.py  s3_bucket.py  scheduler.py  stepfunctions_statemachine.py  vpc_network.py
jobs/: daily_features_tlc.py  daily_features_tlc_large.py  daily_features_tlc_medium.py  daily_features_tlc_small.py  ingest_tlc_sample.py
tests/: test_imports.py
