[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanders-customer-platform"
version = "0.1.0"
description = "Batch job runner + orchestration + feature store (S3 + DynamoDB) with real public data."
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "pyyaml>=6.0.2",
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["app*", "jobs*"]
exclude = ["tests*", "infra*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
]

[project.scripts]
scp-run = "app.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
